# zephyr-lang

./: .gitignore  2.zr  Cargo.toml  README.md  _test.zr  args.zr  bundle.zr  cowsay.zr  f.zr  grammar.ebnf  if.zr  import.zr  index.html  loop.zr  match.zr  meow.zr  meow2.zr  rustfmt.toml  test.txt  test.zr  test2.zr  test3.zr  test4.zr  test_.zr  time.sh  todo.md  todo.txt  what.py  what.zr  what_bundled_will_look_like.zr  x.zr  z
.devcontainer/: devcontainer.json
examples/: error_handling.zr  exports.zr  fibonacci.zr  functions.zr  imports.zr  loops.zr
examples/resources/: exports.zr
lib_tests/: README.md  array.test.zr  buffer.test.zr  coercion.test.zr  enums.test.zr  fs.test.zr  math.test.zr  package.test.zr  string.test.zr  syntax.test.zr  test_template.zr
math/: index.zr  lexer.zr  parser.zr  runner.zr
md/nodes/: assign.md  block.md  declare.md  for.md  function.md  if.md  match.md  try.md
src/: basic_run.rs  bundler.rs  cli.rs  main.rs  main_new_old.rs  mini.rs  package_manager.rs  repl.rs  tester.rs  util.rs
src/errors/: mod.rs
src/executors/: basic_run.rs  mod.rs  repl.rs  tester.rs
src/lexer/: lexer.rs  location.rs  mod.rs  token.rs  tokens.rs
src/lib/: any.zr  array.zr  basics.zr  buffer.zr  console.zr  error.zr  function.zr  http.zr  iter.zr  json.zr  math.zr  network.zr  number.zr  object.zr  old_array.zr  predicates.zr  process.zr  random.zr  string.zr  time.zr
src/lib copy/: any.zr  array.zr  fs.zr  network.zr  predicates.zr
src/parser/: mod.rs  nodes.rs  parser.rs
src/runtime/: interpreter.rs  interpreter_conditionals.rs  memory.rs  (+20 more)
(+58 files in other folders)
