[package]
name = "rust-zephyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
structopt = "0.3.26"

[profile.release]
opt-level = 3
