[package]
name = "rust-zephyr"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"
structopt = "0.3.26"
ureq = "2.9.6"

[profile.release]
opt-level = 3
