[package]
name = "rust-zephyr"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"
pbr = "1.1.1"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
structopt = "0.3.26"
toml = "0.8.12"
json-tools = "*"
uuid = { version = "1.9.1", features = ["v4"] }

[profile.release]
opt-level = 3
